syntax = "proto3";

package proto;

option go_package = "./proto";

service EmployeeService {
    rpc CreateEmployee (CreateEmployeeRequest) returns (CreateEmployeeResponse);
    rpc GetEmployee (GetEmployeeRequest) returns (GetEmployeeResponse);
    rpc UpdateEmployee (UpdateEmployeeRequest) returns (UpdateEmployeeResponse);
    rpc DeleteEmployee (DeleteEmployeeRequest) returns (DeleteEmployeeResponse);
    rpc ListEmployees (ListEmployeesRequest) returns (ListEmployeesResponse);
  }
  
message Employee {
  int32 id = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;
  string position = 5;
  double salary = 6;
}

message CreateEmployeeRequest {
  string first_name = 1;
  string last_name = 2;
  string email = 3;
  string position = 4;
  double salary = 5;
}

message CreateEmployeeResponse {
  Employee employee = 1;
}

message GetEmployeeRequest {
  int32 id = 1;
}

message GetEmployeeResponse {
  Employee employee = 1;
}

message UpdateEmployeeRequest {
  int32 id = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;
  string position = 5;
  double salary = 6;
}

message UpdateEmployeeResponse {
  Employee employee = 1;
}

message DeleteEmployeeRequest {
  int32 id = 1;
}

message DeleteEmployeeResponse {
  string message = 1;
}

message ListEmployeesRequest {}

message ListEmployeesResponse {
  repeated Employee employees = 1;
}
